# LFM-2.0

./: .gitignore  README.md  pyproject.toml
examples/: basic_inference.py
lfm2/: __init__.py
lfm2/data/: dataloader.py
lfm2/inference/: generator.py
lfm2/model/: __init__.py  activations.py  attention.py  attention_utils.py  backbone.py  colbert.py  configs.py  conv_block.py  generation.py  gqa.py  moe.py  moe_metrics.py  normalization.py  positional.py  vlm.py
lfm2/training/: __init__.py  alignment.py  data.py  distillation.py  early_stopping.py  lr_scheduler.py  merging.py  schedulers.py  trainer.py  utils.py
lfm2/utils/: __init__.py  logging.py
scripts/: colbert_demo.py  evaluate.py  generate.py
tests/: test_colbert.py  test_generation.py
ui/: app.js  index.html  style.css  styles.css
